objects/Account.object
<CustomObject>
    <fields>
        <fullName>ANF_OTLM__c</fullName>
        <label>ANF/OTLM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <label>Business Driver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Number__c</fullName>
        <externalId>true</externalId>
        <label>Client Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Satisfaction__c</fullName>
        <label>Client Satisfaction</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Alternative_Phone__c</fullName>
        <label>Company Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <label>Company Logo</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company_Primary_Phone__c</fullName>
        <label>Company Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Toll_Free_Phone__c</fullName>
        <label>Company Toll Free Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Family_Tree__c</fullName>
        <label>Family Tree</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Company_Name__c</fullName>
        <label>Former Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_History__c</fullName>
        <label>Marketing History</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSF_Program_Rep__c</fullName>
        <label>NSF Program Rep</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_with_NSF__c</fullName>
        <label>Revenue with NSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tenure_with_NSF__c</fullName>
        <label>Tenure with NSF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>